lib_LTLIBRARIES = libbolkjuke.la

libbolkjuke_la_SOURCES = bolkjuke.c \
	log.c \
	song.c \
	song_list.c \
	events.c \
	engine.c \
	records.c
libbolkjuke_includedir = $(includedir)/bolkjuke
libbolkjuke_include_HEADERS = bolkjuke.h \
	log.h \
	song.h \
	song_list.h \
	events.h \
	engine.h \
	records.h
